# Pregen

./: Cargo.toml  build.rs  flake.nix  todo.txt
crates/gfx/: Cargo.toml  build.rs
crates/gfx/macro/: Cargo.toml
crates/gfx/src/: device.rs  lib.rs  sampler.rs  shader.rs  surface.rs  texture.rs
crates/gfx/src/buffers/: index.rs  mod.rs  storage.rs  uniform.rs  vertex.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs  mat2.rs  mat3.rs  mat4.rs  quat.rs  transform.rs  vec4.rs
crates/math/src/matrices/: mat2.rs  mat3.rs  mat4.rs
crates/math/src/units/: deg.rs  rad.rs  tau.rs
crates/math/src/vectors/: vec2.rs  vec3.rs  vec4.rs
crates/virtfs/: Cargo.toml
crates/window/: Cargo.toml
crates/window/src/: cursors.rs  event.rs  lib.rs  window.rs
crates/window/src/backends/: glfw.rs  mod.rs  wayland.rs  web.rs  win32.rs  x11.rs
src/: macros.rs  main.rs
src/asset/: image.rs  manager.rs  mod.rs  server.rs
src/gfx/: buffer.rs  context.rs  format.rs  mod.rs  pass.rs
src/gfx/buffers/: index.rs  mod.rs  uniform.rs  vertex.rs
src/gfx/objects/: geometry.rs  group.rs  mod.rs  pipeline.rs  shader.rs
src/gfx/textures/: mod.rs  render.rs  sampler.rs  texture.rs
src/math/: mod.rs  plane.rs  transform.rs
src/rend/: camera.rs  material.rs  mesh.rs  mod.rs  model.rs  vertex.rs
src/rend/groups/: g_camera.rs  g_global.rs  g_material.rs  g_model.rs  mod.rs
src/rend/pipelines/: mod.rs  p_generic.rs  p_post.rs
src/rend/uniforms/: mod.rs  u_camera.rs  u_coordinates.rs  u_frustrum.rs  u_keyboard.rs  u_lighting.rs  u_mesh.rs  u_mouse.rs
src/shaders/: default.wgsl  error.wgsl  light.wgsl  post.wgsl  test.wgsl  tri.wgsl
src/shaders/debug/: normal.wgsl  position.wgsl  uv.wgsl
src/shaders/types/: camera.wgsl  coordinates.wgsl  mouse.wgsl  vertex.wgsl
src/window/: event.rs  mod.rs  window.rs
src/window/backends/: glfw.rs  mod.rs  win32.rs  x11.rs
