[package]
name = "pregen"
edition = "2021"

[features]
opengl = []
profiling = ["profiling/profile-with-tracy"]

[workspace]
members = [
    "crates/gfx",
    "crates/logger",
    "crates/window",
]

[workspace.dependencies]
log = { version = "0.4.22" }
web-sys = { version = "0.3.76" }
bytemuck = { version = "1.22.0" }
profiling = { version = "1.0.16" }
raw-window-handle = { version = "0.6.2" }

[dependencies]
log = { workspace = true }
tobj = { version = "4.0.2" }
gfx-ne = { path = "crates/gfx" }
window = { path = "crates/window" }
logger = { path = "crates/logger" }
bytemuck = { workspace = true, features = ["derive"] }
rand = { version = "0.8.5", features = ["getrandom"] }
profiling = { workspace = true, features = ["procmacros"] }
glam = { version = "0.29.2", features = ["bytemuck", "rand"] }
wgpu = { version = "24.0.1", features = ["vulkan-portability"] }
futures-lite = {version = "2.3.0", default-features = false, features = ["std"]}
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }

[build-dependencies]
serde_json = {version = "1.0.133"}

[lints.clippy]
single_match = "allow"
needless_return = "allow"
needless_borrow = "allow"
bool_comparison = "allow"
assign_op_pattern = "allow"
match_single_binding = "allow"
redundant_field_names = "allow"

[profile.dev.package.image]
opt-level = 3
