[package]
# TODO: rename after refactor
name = "gfx-ne"
edition = "2021"

[dependencies]
log = { workspace = true }
bytemuck = { workspace = true }
profiling = { workspace = true }
gfx-macros = { path = "./macro" }
raw-window-handle = { workspace = true }
wgpu = { workspace = true, features = ["spirv"] }

[build-dependencies]
serde_json = { version = "1.0.133" }
