[package]
name = "window"
edition = "2021"

[features]
# raw_window_handle = ["raw-window-handle", "glfw/raw-window-handle-v0-6"]

[dependencies]
log = { workspace = true }
profiling = { workspace = true }
raw-window-handle = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
glfw = { version = "0.59.0", features = ["log"] }

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = { version = "0.31.10", features = ["log"] }
x11rb = { version = "0.13.1", features = ["allow-unsafe-code"]}

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "winbase", "winerror", "errhandlingapi", "impl-default", "windowsx"] }

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { workspace = true, features = ["Window", "Document", "HtmlCanvasElement", "KeyboardEvent", "MouseEvent", "FocusEvent"] }
