[package]
name = "window"
edition = "2021"

[dependencies]
log = { workspace = true }
profiling = { workspace = true }
raw-window-handle = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
glfw = { version = "0.62.0", features = ["log", "src-build"] }

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = { version = "0.31.11", features = ["log"] }
xkbcommon = { version = "0.9.0", features = ["x11", "wayland"] }
wayland-backend = { version = "0.3.11", features = ["client_system"] }
x11rb = { version = "0.13.1", features = ["allow-unsafe-code", "cursor"] }
# Pretty sure needing to enable `unstable` to gain access to `staging` is a bug
wayland-protocols = { version = "0.32.9", features = ["client", "staging", "unstable"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "winbase", "winerror", "errhandlingapi", "impl-default", "windowsx"] }

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { workspace = true, features = ["Window", "Document", "HtmlCanvasElement", "KeyboardEvent", "MouseEvent", "FocusEvent"] }
